package ar.utn.ba.dsi.fuenteDinamica.models.entities.hechos;

public enum EstadoEdicion {
	PENDIENTE,
	APROBADA,
	RECHAZADA,
	APROBADA_CON_SUGERENCIAS
}